# Remember

./: .env_example  .gitignore  README.md  options.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
news/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_article_slug.py  0003_article_cover.py  0004_alter_article_cover.py  0005_comment.py  0006_rename_created_article_created_at_and_more.py  0007_alter_article_cover.py  0008_article_tags.py  0009_category_article_category.py  0010_comment_parent.py  0011_alter_article_category_alter_article_slug_and_more.py  0012_alter_article_content.py  0013_comment_is_approved.py
news/templatetags/: __init__.py  comments_filters.py  custom_filters.py  custom_tags.py
news/tests/: test_articles.py
static/assets/css/: main.css
templates/: base.html
templates/includes/: business_category.html  culture_category.html  lifestyle_category.html  navbar.html
templates/pages/: article_detail.html  article_list.html  category.html  contact.html  index.html  profile.html
templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  register_done.html
users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_delete_userprofile.py
users/tests/: test_users.py
