[tool.poetry]
name = "remember"
version = "0.1.0"
description = ""
authors = ["DotVr46 <maggot8950@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "3.8.1"
black = "24.8.0"
click = "8.1.7"
colorama = "0.4.6"
django = "5.0.7"
django-appconf = "1.0.6"
django-avatar = "8.0.1"
django-cleanup = "8.1.0"
django-jazzmin = "3.0.0"
django-taggit = "6.0.0"
dnspython = "2.6.1"
feedparser = "6.0.11"
mypy-extensions = "1.0.0"
packaging = "24.1"
pathspec = "0.12.1"
pillow = "10.4.0"
platformdirs = "4.2.2"
psycopg2 = "2.9.9"
python-dotenv = "1.0.1"
setuptools = "73.0.1"
sgmllib3k = "1.0.0"
six = "1.16.0"
sqlparse = "0.5.0"
typing-extensions = "4.12.2"
tzdata = "2024.1"
django-ckeditor-5 = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
